[package]
name = "revive-engine"
version = "0.1.0"
edition = "2021"
authors = ["James Feole <jamesfeole87@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["rvv-core"]

[dependencies]
rvv-core = { path = "rvv-core", version = "0.1.0" }